--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -4,12 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Content Manager</title>
-
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="./netlify-identity-widget.js"></script>
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script src="./netlify-cms.js"></script>
   <script>
     if (window.netlifyIdentity) {
       window.netlifyIdentity.on("init", user => {
@@ -21,10 +20,49 @@
       });
     }
   </script>
+
+
+<script src="./netlify-cms.js.map"></script>
+<script>
+const CategoriesControl = createClass({
+  handleChange: function(e) {
+    const separator = this.props.field.get('separator', ', ')
+    this.props.onChange(e.target.value.split(separator).map((e) => e.trim()));
+  },
+
+  render: function() {
+    const separator = this.props.field.get('separator', ', ');
+    var value = this.props.value;
+    return h('input', {
+      id: this.props.forID,
+      className: this.props.classNameWrapper,
+      type: 'text',
+      value: value ? value.join(separator) : '',
+      onChange: this.handleChange,
+    });
+  },
+});
+
+const CategoriesPreview = createClass({
+  render: function() {
+    return h('ul', {},
+      this.props.value.map(function(val, index) {
+        return h('li', {key: index}, val);
+      })
+    );
+  }
+});
+
+const schema = {
+  properties: {
+    separator: { type: 'string' },
+  },
+}
+
+CMS.registerWidget('categories', CategoriesControl, CategoriesPreview, schema);
+// CMS.registerWidget('categories', CategoriesControl);
+</script>
+
+
 </body>
 </html>
-
-
-
-
-
